[package]
name = "behaviortree-rs-derive"
description = "Procedural macros for behaviortree-rs."
version = "0.2.2"
edition = "2021"
authors = ["Nicholas Crothers <ncrothers523@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
log = "0.4.20"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "visit-mut", "visit"] }

[dev-dependencies]
behaviortree-rs = { path = "../behaviortree-rs" }
