[package]
name = "behaviortree-rs"
description = "Rust implementation of BehaviorTree.CPP, a robust behavior tree library in C++"
version = "0.2.1"
edition = "2021"
authors = ["Nicholas Crothers <ncrothers523@gmail.com>"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
behaviortree-rs-derive = "0.2.1"
futures = { version = "0.3.28" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
thiserror = "1.0.47"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["macros"] }
tokio-test = "0.4.3"
