[package]
name = "bt-cpp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bt-derive = { path = "../bt_derive" }
log = "0.4.20"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
