[package]
name = "bt_cpp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bt-derive = { path = "../bt_derive" }
crossbeam = "0.8.2"
futures = { version = "0.3.28", optional = true }
log = "0.4.20"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["sync", "rt", "test-util", "macros"] }

[features]
async_nodes = ["dep:futures"]
